--- a/bin/src/main/resources/templates/editar.html
+++ b/bin/src/main/resources/templates/editar.html
@@ -16,11 +16,11 @@
 		  <label th:text="${unsucess}"></label>
 		  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 		</div>
-		<h3>Mantenimiento de productos</h3>
-		<form th:action="@{/grabar}" th:object="${producto}" method="post" name="formulario">
+		<h3>Editar Producto</h3>
+		<form th:action="@{/actualizar}" th:object="${producto}" method="post" name="formulario">
 			<div class="form-group">
 				<label for="inputCodigo">Código</label>
-				<input th:field="*{codigo}" class="form-control" id="inputCodigo" required minlength="2" maxlength="5" placeHolder="P00" oninvalid="this.setCustomValidity('Ingrese un código de producto')"  oninput="this.setCustomValidity('')">
+				<input th:field="*{codigo}" class="form-control" id="inputCodigo" required minlength="2" maxlength="5" placeHolder="P00" oninvalid="this.setCustomValidity('Ingrese un código de producto')"  oninput="this.setCustomValidity('')" readonly>
 			</div>
 			<div class="form-group">
 				<label for="inputNombre">Nombre del producto</label>
@@ -36,7 +36,7 @@
 					<input th:field="*{precio}" class="form-control" id="inputPrecio" placeholder="0.00" type="number" step="0.2" required>
 				</div>
 			</div>
-			<div class="row">
+			<div class="row mb-5">
 				<div class="form-group col-md-4">
 					<label for="inputCategoria">Categoria</label>
 					<select id="inputCategoria" class="form-control" th:field="*{categoria.idCategoria}">
@@ -67,31 +67,11 @@
 					</select>
 				</div>
 			</div>
-			
-			<div class="form-group col-md-12 mb-4">
-			    <label for="imagen">Imagen</label>
-			    <input type="file" class="form-control" name="imagen" id="imagen" onchange="previewImage(event)">
-			</div>
-			<div class="form-group col-md-12 mb-4">
-			    <img id="create_img_preview" alt="Producto Image" class="img-thumbnail" style="max-width: 200px;" />
-			</div>
-
-			<button type="submit" class="btn btn-primary">Registrar</button>
+			<button type="submit" class="btn btn-primary">Actualizar</button>
 			<a href="/listar" class="btn btn-primary">Listar</a>
 		</form>
-	</div>
 	
-	<script>
-		function previewImage(event) {
-		    var reader = new FileReader();
-		    reader.onload = function() {
-		        var output = document.getElementById('create_img_preview');
-		        output.src = reader.result;
-		    }
-		    reader.readAsDataURL(event.target.files[0]);
-		}
-	</script>
-
+	</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 </html>
