--- a/bin/src/main/resources/templates/listado.html
+++ b/bin/src/main/resources/templates/listado.html
@@ -19,7 +19,6 @@
     	<table class="table table-hover" id="myTable">
     		<thead>
     			<tr>
-					<th scope="col">Imagen</th>
 					<th scope="col">ID</th>
     				<th scope="col">Código</th>
     				<th scope="col">Nombre</th>
@@ -32,9 +31,6 @@
     		</thead>
     		<tbody>
     			<tr th:each="p : ${lstProductos}">
-					<td>
-					    <img th:src="@{'/images/' + ${p.imagen}}" alt="Imagen" class="img-thumbnail" style="width: 70px;" />
-					</td>
 					<td th:text="${pStat.count}+'/'+${pStat.size}"></td>
     				<td th:text="${p.codigo}"></td>
     				<td th:text="${p.descripcion}"></td>
@@ -61,7 +57,7 @@
 	      	<form th:action="@{/eliminar}" method="post">
 		      <div class="modal-body">
 				 <input type="hidden" name="codigo" id="codigo">
-				  <span id="idProductoLista" style="color: red;font-weight: bold;"></span>&nbsp;<span id="nombreProducto"></span>
+				  <span id="idProductoLista" style="color: red;font-weight: bold;">&nbsp;</span><span id="nombreProducto"></span>
 		      </div>
 		      <div class="modal-footer">
 		          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal"> Cancelar </button>
@@ -82,9 +78,9 @@
 					return $(this).text();
 				}).get();
 				console.log(data);
-				$('#codigo').val(data[2]);
-				$('#idProductoLista').text(data[1]);
-				$('#nombreProducto').text("¿Está seguro de eliminar el producto: "+ data[3]+"?");
+				$('#codigo').val(data[1]);
+				$('#idProductoLista').text(data[0]);
+				$('#nombreProducto').text("¿Está seguro de eliminar el producto: "+ data[2]+"?");
 			})
 		});
 	</script>
