--- a/src/main/resources/templates/editar.html
+++ b/src/main/resources/templates/editar.html
@@ -36,7 +36,7 @@
 					<input th:field="*{precio}" class="form-control" id="inputPrecio" placeholder="0.00" type="number" step="0.2" required>
 				</div>
 			</div>
-			<div class="row mb-5">
+			<div class="row">
 				<div class="form-group col-md-4">
 					<label for="inputCategoria">Categoria</label>
 					<select id="inputCategoria" class="form-control" th:field="*{categoria.idCategoria}">
@@ -66,10 +66,29 @@
 						-->
 					</select>
 				</div>
+			</div>			
+			
+            <div class="form-group col-md-12 mb-2">
+			    <label for="imagen">Imagen</label>
+			    <input type="file" class="form-control" name="imagen" id="imagen">
+			</div>		
+			<div class="form-group col-md-12 mb-4">
+			    <img id="edit_img_preview" th:src="@{'/images/' + ${producto.imagen}}" alt="Producto Image" class="img-thumbnail" style="max-width: 200px;" />
 			</div>
+			   
 			<button type="submit" class="btn btn-primary">Actualizar</button>
 			<a href="/listar" class="btn btn-primary">Listar</a>
 		</form>
+		
+	<script>
+		document.getElementById("imagen").addEventListener("change", function() {
+		  var reader = new FileReader();
+		  reader.onload = function(e) {
+		    document.getElementById("edit_img_preview").src = e.target.result;
+		  };
+		  reader.readAsDataURL(this.files[0]);
+		});
+	</script>
 	
 	</div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
